Update: Change list to prevent crashing whena adding and getting dislikes and allergies.